--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1,3 +1,5 @@
+@import url('//fonts.googleapis.com/css?subset=latin,cyrillic-ext,latin-ext,cyrillic&family=Open+Sans+Condensed:300|Open+Sans:400,600,400italic,600italic|Merriweather:400,300,300italic,400italic,700,700italic|Roboto+Slab:400,300');
+@import url('//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css');
 /* === Core Styles === */
 body {
   background-color: #ffffff;
@@ -110,12 +112,12 @@ article.preview p.readmore {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  -webkit-background-size: cover !important;
   background-size: cover !important;
   background-position: center center !important;
   background-color: #ffffff;
 }
 h1.blog-title,
+h2.blog-subtitle,
 h2.blog-description {
   text-align: center;
 }
@@ -123,12 +125,23 @@ h1.blog-title {
   font-size: 48px;
   line-height: 52px;
   margin-top: 10px;
-  margin-bottom: 30px;
+  margin-bottom: 15px;
   padding: 0;
+}
+h2.blog-subtitle {
+  margin: 0px;
+  text-transform: lowercase;
+}
+h2.blog-subtitle img {
+  padding: 0px 1px;
+}
+h2.blog-subtitle a {
+  color: inherit;
 }
 h2.blog-description {
   border-bottom: 1px solid #ecf0f1;
   border-top: 1px solid #ecf0f1;
+  margin-top: 20px;
   margin-bottom: 2em;
   padding: .5em 1em;
   line-height: 1.2em;
@@ -222,7 +235,6 @@ div.authorimage {
   width: 70px;
   height: 70px;
   border-radius: 50%;
-  -webkit-background-size: cover !important;
   background-size: cover !important;
   background-position: center center !important;
   margin-right: 10px;
