--- a/default.hbs
+++ b/default.hbs
@@ -39,6 +39,7 @@
     <header id="site-head">
         {{#if @blog.logo}}<a id="blog-logo" href="{{@blog.url}}"><div class="bloglogo" style="background: url({{@blog.logo}})"></div></a>{{/if}}
         <h1 class="blog-title"><a href="{{@blog.url}}">{{@blog.title}}</a></h1>
+        <h2 class="blog-subtitle"><a href="http://xn--53hx230o.ws">💻☕️.ws</a></h2>
         {{> header-description}}
         {{!> menu}}
     </header>
